added manual_loaders
